--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
         <title>About Us</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="main.css" type="text/css"/>
+        <link rel="stylesheet" href="styles/main.css" type="text/css"/>
     </head>
     <body>
         <div id="header">
