Modified index.html, changed logo.png to logo2.png and added a hyperlink to it, added another image for the media query in main.css, and changed the div element with id menu to nav with class navbar

--- a/WWW/index.html
+++ b/WWW/index.html
@@ -8,16 +8,17 @@
         </head>
     <body>
         <div id="header">
-           <img src="images/logo.png"/>
-            <div id="menubar">
-                <ul id="menu">
+           <a href="index.html"><img src="images/logo2.png" class="menuimage1"/></a>
+           <img src="images/Menu.png"/ class="menuimage2">
+            <nav class="navbar">
+                <ul class="navbar">
                     <li><a href="#">Home</a></li>
                     <li><a href="#">About Us</a></li>
                     <li><a href="#">Gallery</a></li>
                     <li><a href="#">Mission and Vision</a></li>
                     <li><a href="#">Contact Us</a></li>
                 </ul> 
-            </div>  
+            </nav>  
         </div>
          
         <div id="footer">Bottom div content</div>
