--- a/WWW/index.html
+++ b/WWW/index.html
@@ -14,6 +14,7 @@
                 <ul class="navbar">
                     <li><a href="#">Home</a></li>
                     <li><a href="#">About Us</a></li>
+                    <li><a href="#">Blog</a></li>
                     <li><a href="#">Gallery</a></li>
                     <li><a href="#">Mission and Vision</a></li>
                     <li><a href="#">Contact Us</a></li>
