--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
     <html>
         <head>
-            <title>My Bio</title>
+            <title>Welcome</title>
             <meta charset="UTF-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <link rel="stylesheet" href="styles/main.css" type="text/css"/>
@@ -14,11 +14,43 @@
                     <li><a href="#">Home</a></li>
                     <li><a href="#">About Us</a></li>
                     <li><a href="#">Gallery</a></li>
-                    <li><a href="#">Mission and Vision</a></li>
                     <li><a href="#">Contact Us</a></li>
                 </ul> 
             </div>  
         </div>
+        <br>
+        <br>
+        <header id="intro">
+            <h1> Animal Talks </h1>
+        </header>
+        <div id="summary">
+            <p>"Each and every animal of earth has as much right to be here as you and me" ~Anthony Douglas Williams</p>
+        </div>
+
+        <div id="mission">
+            <h2>Our Mission</h2>
+            <p>To give awareness using our skills learned in pursuing Bachelor of Science
+            in Information Technology, promote and protect the rights of every animals as every lives of animals is valuable. To help and 
+            keep rescuing animals, While doing so we may lose our mind from doing these actions, but surely we will find our soul. Some people don't understand why
+            we help animals in need but in our side, we dont understand why they wonder.
+                </p>
+        </div>
+        <div id="vision">
+            <h2>Our Vision</h2>
+            <p>We dream of humanity who is passionate enough to have awareness, love and care that will enable them to realize that animals have feelings.
+            They can think and feel just like us humans. As students of a catholic school institution,  we the BSIT students continously improve to save animals and prevent violence to them.
+            </p>
+        </div>
+        <div id="core">
+            <h2>Our Core Values</h2>
+            <p><b>Christian Spirited</b> - Having God as the center of our faith and letting him use us for the animals. God's will <br>
+            <b>Creativity</b> - Using our skills and in what we've acquired in the BSIT as a student of Saint Louis University. <br>
+            <b>Competence</b> - Changing every obstacle that come in our way as a challenge for us to improve and deliver for the animal welfare. <br>
+            <b>Social Involvement</b> - Being socialy active to express what we're implying for the animals.
+            </p>
+        </div>
+
+
          
         <div id="footer">Bottom div content</div>
     </body>
