Added another content to index.html

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <header id="intro">
             <h1> Animal Talks </h1>
         </header>
+        <hr>
         <div id="summary">
             <p>"Each and every animal of earth has as much right to be here as you and me" ~Anthony Douglas Williams</p>
         </div>
@@ -49,6 +50,14 @@
             <b>Social Involvement</b> - Being socialy active to express what we're implying for the animals.
             </p>
         </div>
+        <div id="join">
+            <h2>Join Us!</h2>
+            <p>Bring out the Animal Rescuer within you! By joining us, we could add your stories in our gallery page to inspire more people to 
+            have them join us and to be aware that animal cruelty must stop!. You could be one of us to visit places and to discover animal species.
+            You could join our rescue team and help animals in real time! But we first, we need you to contact us by clicking on the About us.
+            </p>
+        </div>
+
 
 
          
