Modified Draft.html, made the navigation into images

--- a/Draft/Draft.html
+++ b/Draft/Draft.html
@@ -8,11 +8,14 @@
 </head>
 <body>
 
-  <nav>
-    <ul>
-        <li>Home</li>
-        <li>Mission</li>
-        <li>Values</li>
+  <nav class="navbar">
+    <ul class="navbar">
+        <li><img src="images/HomeButton.png" width="50" height="50"><a href="#"></a></li>
+        <li><img src="images/MissionButton.png" width="50" height="50"><a href="#"></a></li>
+        <li><img src="images/VisionButton.png" width="50" height="50"><a href="#"></a></li>
+        <li><img src="images/ValuesButton.png" width="50" height="50"><a href="#"></a></li>
+        <li><img src="images/AboutButton.png" width="50" height="50"><a href="#"></a></li>
+        <li><img src="images/ContactButton.png" width="50" height="50"><a href="#"></a></li>
     </ul>
 </nav> 
     <header>
