added 8 principle in draft.html

--- a/Draft/Draft.html
+++ b/Draft/Draft.html
@@ -44,12 +44,37 @@
         Creativity - Using our skills and in what we've acquired in the BSIT as a student of Saint Louis University.
         Competence - Changing every obstacle that come in our way as a challenge for us to improve and deliver for the animal welfare.
         Social Involvement - Being socialy active to express what we're implying for the animals.</p>
-        <img class ="img-circle" src ="images/1.jpg" alt="image here">
-        <img class ="img-circle" src ="images/2.jpg" alt="image here">
-        <img class ="img-circle" src ="images/3.jpg" alt="image here">
+        
+        <table>
+            <tr>
+                 <img class ="img-circle" src ="images/1.jpg" alt="image here">
+            </tr>
+            <tr>
+                <img class ="img-circle" src ="images/2.jpg" alt="image here">
+            </tr>
+            <tr>
+              <img class ="img-circle" src ="images/3.jpg" alt="image here">
+            </tr>    
+        </table>
+        </div>
+    
+        <div id="principle">
+            <h2>The 8 Principles that we believe by:</h2>
+            <p>
+            <ol>
+                <li>Animals should be taken care of, like human beings take care of each other.</li>
+                <li>Wild animals should be left alone nor should they be disturbed</li>
+                <li>Animals should be loved and they should not be killed nor be eaten.</li>
+                <li>Domestic animals should have a proper home to live in. </li>
+                <li>People should treat animals with respect.</li>
+                <li>Be responsible in taking care of animals.</li>
+                <li>Always help an animal in need.</li>
+                <li>Animals should not be abused.</li>
+            </ol>
+            </p>
         </div>
 
-        <div id="join">
+        <div id="join">    
 
         <h2>Join Us!</h2>
 
