Added 3 photos in core values in draft.html

--- a/Draft/Draft.html
+++ b/Draft/Draft.html
@@ -61,13 +61,13 @@
         
         <table>
             <tr>
-                 <img class ="img-circle" src ="images/1.jpg" alt="image here">
+                 <img class ="img-circle" src ="images/gallery1.jpg" alt="image here">
             </tr>
             <tr>
-                <img class ="img-circle" src ="images/2.jpg" alt="image here">
+                <img class ="img-circle" src ="images/gallery2.jpg" alt="image here">
             </tr>
             <tr>
-              <img class ="img-circle" src ="images/3.jpg" alt="image here">
+              <img class ="img-circle" src ="images/gallery3.jpg" alt="image here">
             </tr>    
         </table>
         </div>
