Add a photo to draft.html and to images dir

--- a/Draft/Draft.html
+++ b/Draft/Draft.html
@@ -109,7 +109,7 @@
             </tr>
              <tr>
                 <td>
-                <img class ="img-circle" src ="images/cat.jpg" alt="image here">
+                <img class ="img-circle" src ="images/miguel2.jpg" alt="image here">
                 </td>
                 <td>
                 <img class ="img-circle" src ="images/catdog.jpg" alt="image here">
