Added "About Us" header

--- a/Draft/Draft.html
+++ b/Draft/Draft.html
@@ -102,7 +102,8 @@
             <li>love and care for animals.</li>
         </ul>
     </div>
-    <div id="about">
+    <div id="about-us">
+        <h2>About Us</h2>
         <div id="galo"><img src="images/Galo.jpg" alt="Galo" id="galo-pic">
             <p class="name">Galo Berlyn Garlejo</p>
             <p class="role">UX designer</p>
