checked and edited Draft.html - validated through html validator

--- a/Draft/Draft.html
+++ b/Draft/Draft.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <title>Draft</title>
@@ -10,39 +10,39 @@
 <body>
     <nav class="navbar">
         <ul class="navbar">
-            <li><img src="images/HomeButton.png" width="50" height="50">
-                <a href="#"></a>
+            <li><a href="#home"><img src="images/HomeButton.png" width="50" height="50" alt="Home">
+                </a>
             </li>
-            <li><img src="images/MissionButton.png" width="50" height="50">
-                <a href="#"></a>
+            <li><a href="#mission"><img src="images/MissionButton.png" width="50" height="50" alt="Mission">
+                </a>
             </li>
-            <li><img src="images/VisionButton.png" width="50" height="50">
-                <a href="#"></a>
+            <li><a href="#vision"><img src="images/VisionButton.png" width="50" height="50" alt="Vision">
+                </a>
             </li>
-            <li><img src="images/ValuesButton.png" width="50" height="50">
-                <a href="#"></a>
+            <li><a href="#values"><img src="images/ValuesButton.png" width="50" height="50" alt="Values">
+                </a>
             </li>
-            <li><img src="images/AboutButton.png" width="50" height="50">
-                <a href="#"></a>
+            <li><a href="#about-us"><img src="images/AboutButton.png" width="50" height="50" alt="About Us">
+                </a>
             </li>
-            <li><img src="images/ContactButton.png" width="50" height="50">
-                <a href="#"></a>
+            <li><a href="#join"><img src="images/ContactButton.png" width="50" height="50"  alt="Contact Us">
+                </a>
             </li>
         </ul>
     </nav>
-    <header>
-        <video src="gallery.mp4" autoplay muted fullscreen> </video>
+    <header id="home">
+        <video src="gallery.mp4" autoplay muted> </video>
     </header>
     <div id="about">
         <h1>Welcome to Animanl Talks, we're gald youre here!</h1>
         <h2>About Animal talks</h2>
         <p>We are a group of young individuals who love and care for the welfare of the animals. We believe that animals are also as important as humans and we should treat them right. Our primary objective is to make people see that animals should be cared for and not to take them for granted, as the saying goes "Do unto others as you would have them do unto you" </p>
     </div>
-    <div id="mission"> <img src="Images/dog.jpg">
+    <div id="mission"> <img src="Images/dog.jpg" alt="Image of a stretching dog">
         <h2>Our Mission</h2>
         <p> To give awareness using our skills learned in pursuing Bachelor of Science in Information Technology, promote and protect the rights of every animals as every lives of animals is valuable. To help and keep rescuing animals, While doing so we may lose our mind from doing these actions, but surely we will find our soul. Some people don't understand why we help animals in need but in our side, we dont understand why they wonder. </p>
     </div>
-    <div id="vision"> <img src="Images/cat.jpg">
+    <div id="vision"> <img src="Images/cat.jpg" alt="Image of a cat">
         <h2>Our Vision</h2>
         <p>We dream of humanity who is passionate enough to have awareness, love and care that will enable them to realize that animals have feelings. They can think and feel just like us humans. As students of a catholic school institution, we the BSIT students continously improve to save animals and prevent violence to them.</p>
     </div>
@@ -67,23 +67,23 @@
     <div id="hound"> </div>
     <div id="gallery">
         <h2>Gallery</h2>
-        <table width="100%">
-            <tr>
-                <td> <img class="img-circle" src="images/gallery1.jpg" alt="image here"> </td>
-                <td> <img class="img-circle" src="images/gallery2.jpg" alt="image here"> </td>
-                <td> <img class="img-circle" src="images/gallery3.jpg" alt="image here"> </td>
-            </tr>
-            <tr>
-                <td> <img class="img-circle" src="images/1.jpg" alt="image here"> </td>
-                <td> <img class="img-circle" src="images/2.jpg" alt="image here"> </td>
-                <td> <img class="img-circle" src="images/3.jpg" alt="image here"> </td>
-            </tr>
-            <tr>
-                <td> <img class="img-circle" src="images/miguel2.jpg" alt="image here"> </td>
-                <td> <img class="img-circle" src="images/catdog.jpg" alt="image here"> </td>
-                <td> <img class="img-circle" src="images/dogmiguel.jpg" alt="image here"> </td>
-            </tr>
-        </table>
+        <div class="table-gallery">
+			<img class="img-circle" src="images/gallery1.jpg" alt="image here">
+			<img class="img-circle" src="images/gallery2.jpg" alt="image here">
+			<img class="img-circle" src="images/gallery3.jpg" alt="image here">
+        </div>
+
+		<div class="table-gallery">
+            <img class="img-circle" src="images/1.jpg" alt="image here">
+            <img class="img-circle" src="images/2.jpg" alt="image here">
+            <img class="img-circle" src="images/3.jpg" alt="image here">
+        </div>
+
+		<div class="table-gallery">
+                <img class="img-circle" src="images/miguel2.jpg" alt="image here">
+                <img class="img-circle" src="images/catdog.jpg" alt="image here">
+                <img class="img-circle" src="images/dogmiguel.jpg" alt="image here">
+		</div>
     </div>
     <div id="wecare">
         <h2>Because we care</h2>
