fixed the Draft folder to comply with the requirements and added meta name tags on Draft.html

--- a/Draft/Draft.html
+++ b/Draft/Draft.html
@@ -5,7 +5,10 @@
     <title>Draft</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="main.css" type="text/css" /> </head>
+    <meta name="author" content="9433B-G2">
+	<meta name="description" content="We are a group of young individuals who love and care for the welfare of the animals">
+	<link rel ="icon" href="styles/images/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="styles/main.css" type="text/css" /> </head>
 
 <body>
     <nav class="navbar">
@@ -38,7 +41,7 @@
         <h2>About Animal talks</h2>
         <p>We are a group of young individuals who love and care for the welfare of the animals. We believe that animals are also as important as humans and we should treat them right. Our primary objective is to make people see that animals should be cared for and not to take them for granted, as the saying goes "Do unto others as you would have them do unto you" </p>
     </div>
-    <div id="mission"> <img src="Images/dog.jpg" alt="Image of a stretching dog">
+    <div id="mission"> <img src="Images/dog.jpg" alt="Image of a dog">
         <h2>Our Mission</h2>
         <p> To give awareness using our skills learned in pursuing Bachelor of Science in Information Technology, promote and protect the rights of every animals as every lives of animals is valuable. To help and keep rescuing animals, While doing so we may lose our mind from doing these actions, but surely we will find our soul. Some people don't understand why we help animals in need but in our side, we dont understand why they wonder. </p>
     </div>
