changed some tags and nav icon

--- a/Draft/Draft.html
+++ b/Draft/Draft.html
@@ -9,32 +9,32 @@
 	<meta name="description" content="We are a group of young individuals who love and care for the welfare of the animals">
 	<link rel ="icon" href="styles/images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles/main.css" type="text/css" /> </head>
-    </head>
+    
 
 <body>
-    <nav class="navbar">
-        <ul class="navbar">
-            <li><a href="#home"><img src="images/HomeButton.png" width="50" height="50" alt="Home">
+    <nav>
+        <ul>
+            <li><a href="#home" class="options"> HOME 
                 </a>
             </li>
-            <li><a href="#mission"><img src="images/MissionButton.png" width="50" height="50" alt="Mission">
+            <li><a href="#mission" class="options"> MISSION
                 </a>
             </li>
-            <li><a href="#vision"><img src="images/VisionButton.png" width="50" height="50" alt="Vision">
+            <li><a href="#vision" class="options"> VISION
                 </a>
             </li>
-            <li><a href="#values"><img src="images/ValuesButton.png" width="50" height="50" alt="Values">
+            <li><a href="#values" class="options"> VALUES
                 </a>
             </li>
-            <li><a href="#about-us"><img src="images/AboutButton.png" width="50" height="50" alt="About Us">
+            <li><a href="#about-us" class="options"> ABOUT
                 </a>
             </li>
-            <li><a href="#join"><img src="images/ContactButton.png" width="50" height="50"  alt="Contact Us">
+            <li><a href="#join" class="options"> JOIN
                 </a>
             </li>
         </ul>
     </nav>
-    <header id="home">
+    <header>
         <video src="gallery.mp4" autoplay muted> </video>
     </header>
     <div id="about">
@@ -42,22 +42,23 @@
         <h2>About Animal talks</h2>
         <p>We are a group of young individuals who love and care for the welfare of the animals. We believe that animals are also as important as humans and we should treat them right. Our primary objective is to make people see that animals should be cared for and not to take them for granted, as the saying goes "Do unto others as you would have them do unto you" </p>
     </div>
-    <div id="mission"> <img src="Images/dog.jpg" alt="Image of a dog">
+    <div id="mission"> <img src="Images/MissionIcon.png" alt="Image of a dog">
         <h2>Our Mission</h2>
         <p> To give awareness using our skills learned in pursuing Bachelor of Science in Information Technology, promote and protect the rights of every animals as every lives of animals is valuable. To help and keep rescuing animals, While doing so we may lose our mind from doing these actions, but surely we will find our soul. Some people don't understand why we help animals in need but in our side, we dont understand why they wonder. </p>
     </div>
-    <div id="vision"> <img src="Images/cat.jpg" alt="Image of a cat">
+    <div id="vision"> <img src="Images/VisionIcon.png" alt="Image of a cat">
         <h2>Our Vision</h2>
         <p>We dream of humanity who is passionate enough to have awareness, love and care that will enable them to realize that animals have feelings. They can think and feel just like us humans. As students of a catholic school institution, we the BSIT students continously improve to save animals and prevent violence to them.</p>
     </div>
     <div id="care"> </div>
     <div id="values">
         <h2>Our Core Values</h2>
-        <p>Christian Spirited - Having God as the center of our faith and letting him use us for the animals. God's will Creativity - Using our skills and in what we've acquired in the BSIT as a student of Saint Louis University. Competence - Changing every obstacle that come in our way as a challenge for us to improve and deliver for the animal welfare. Social Involvement - Being socialy active to express what we're implying for the animals.</p>
+        <p>Social Involvement - Being socialy active to express what we're implying for the animals. <br> Christian Spirited - Having God as the center of our faith and letting him use us for the animals. <br>
+            God's will Creativity - Using our skills and in what we've acquired in the BSIT as a student of Saint Louis University.<br> Competence - Changing every obstacle that come in our way as a challenge for us to improve and deliver for the animal welfare.</p>
     </div>
     <div id="principle">
-        <h2>The 8 Principles that we believe by:</h2>
-        <ol>
+        <h2>The Principles that we believe by:</h2>
+        <ul>
             <li>Animals should be taken care of, like human beings take care of each other.</li>
             <li>Wild animals should be left alone nor should they be disturbed</li>
             <li>Animals should be loved and they should not be killed nor be eaten.</li>
@@ -66,7 +67,7 @@
             <li>Be responsible in taking care of animals.</li>
             <li>Always help an animal in need.</li>
             <li>Animals should not be abused.</li>
-        </ol>
+        </ul>
     </div>
     <div id="hound"> </div>
     <div id="gallery">
@@ -131,10 +132,10 @@
     </div>
     <div id="join">
         <h2>Join Us!</h2>
-        <p>Bring out the Animal Rescuer within you! By joining us, we could add your stories in our gallery page to inspire more people to have them join us and to be aware that animal cruelty must stop!. You could be one of us to visit places and to discover animal species. You could join our rescue team and help animals in real time! But we first, we need you to contact us by clicking on the About us.</p>
+        <p>Bring out the Animal Rescuer within you! By joining us, we could add your stories in our gallery page to inspire more people to have them join us and to be aware that animal cruelty must stop! You could be one of us to visit places and to discover animal species. You could join our rescue team and help animals in real time! But we first, we need you to contact us by clicking on the About us.</p>
     </div>
-    <div id="footer"> Instagram: <a href="#">@AnimalTalks</a> Facebook: <a href="#">@AnimalTalks</a>
-        <br> Contact us: 495-48-52 </div>
+    <footer> Instagram: <a href="#">@AnimalTalks</a> Facebook: <a href="#">@AnimalTalks</a>
+        <br> Contact us: 495-48-52</footer>
 </body>
 
 </html>
