Edited Drafts/style/main.css and Drafts/drafts.html changed gallery, picture, changed the navbar when hovering, and fixed the gallery's formation

--- a/Draft/Draft.html
+++ b/Draft/Draft.html
@@ -76,7 +76,7 @@
         <div class="table-gallery">
 			<img class="img-circle" src="images/gallery1.jpg" alt="image here">
 			<img class="img-circle" src="images/gallery2.jpg" alt="image here">
-			<img class="img-circle" src="images/gallery3.jpg" alt="image here">
+			<img class="img-circle" src="images/asao.jpg" alt="image here">
         </div>
 
 		<div class="table-gallery">
