--- a/altstyle/index.html
+++ b/altstyle/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="9433B-G2">
 	<meta name="description" content="We are a group of young individuals who love and care for the welfare of the animals">
 	<link rel ="icon" href="styles/images/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="altstyle/altstyle.css" type="text/css" />  </head>
+    <link rel="stylesheet" href="altstyle/main.css" type="text/css" />  </head>
     
 
 <body>
