--- a/Draft/index.html
+++ b/Draft/index.html
@@ -43,11 +43,11 @@
         <h2 id="about-animal">About Animal talks</h2>
         <p id="about-content">We are a group of young individuals who love and care for the welfare of the animals. We believe that animals are also as important as humans and we should treat them right. Our primary objective is to make people see that animals should be cared for and not to take them for granted, as the saying goes "Do unto others as you would have them do unto you" </p>
     </div>
-    <div id="mission"> <img src="Images/MissionIcon.png" alt="Image of a dog">
+    <div id="mission"> <img src="images/MissionIcon.png" alt="Image of a dog">
         <h2 id="mission-header">Our Mission</h2>
         <p id="mission-content"> To give awareness using our skills learned in pursuing Bachelor of Science in Information Technology, promote and protect the rights of every animals as every lives of animals is valuable. To help and keep rescuing animals, While doing so we may lose our mind from doing these actions, but surely we will find our soul. Some people don't understand why we help animals in need but in our side, we dont understand why they wonder. </p>
     </div>
-    <div id="vision"> <img src="Images/VisionIcon.png" alt="Image of a cat">
+    <div id="vision"> <img src="images/VisionIcon.png" alt="Image of a cat">
         <h2 id="vision-header">Our Vision</h2>
         <p id="vision-content">We dream of humanity who is passionate enough to have awareness, love and care that will enable them to realize that animals have feelings. They can think and feel just like us humans. As students of a catholic school institution, we the BSIT students continously improve to save animals and prevent violence to them.</p>
     </div>
